--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -234,7 +234,8 @@ jobs:
             # Sign the Python library with ad-hoc signature
             if [ -f "$FRAMEWORK_PATH/Python" ]; then
               # Check if already signed, if so remove signature first
-              if codesign -v "$FRAMEWORK_PATH/Python" 2>/dev/null; then
+              if codesign -dv "$FRAMEWORK_PATH/Python" 2>&1 | grep -q "Signature="; then
+                echo "Removing existing signature from Python library"
                 codesign --remove-signature "$FRAMEWORK_PATH/Python"
               fi
               codesign -s - "$FRAMEWORK_PATH/Python"
