--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -240,45 +240,68 @@ jobs:
             ln -sf "$PYTHON_VERSION" "Versions/Current"
             ln -sf "Versions/Current/Python" "Python"
             
-            # Sign the Python library with ad-hoc signature
+            # Create Info.plist for the framework
+            mkdir -p "$FRAMEWORK_PATH/Resources"
+            cat > "$FRAMEWORK_PATH/Resources/Info.plist" << EOF
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>CFBundleExecutable</key>
+    <string>Python</string>
+    <key>CFBundleIdentifier</key>
+    <string>org.python.python</string>
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
+    <key>CFBundleName</key>
+    <string>Python</string>
+    <key>CFBundlePackageType</key>
+    <string>FMWK</string>
+    <key>CFBundleShortVersionString</key>
+    <string>$PYTHON_VERSION</string>
+    <key>CFBundleVersion</key>
+    <string>$PYTHON_VERSION</string>
+</dict>
+</plist>
+EOF
+            
+            ln -sf "Versions/Current/Resources" "Resources"
+            
             echo "Removing any existing signature from Python library"
             codesign --remove-signature "$FRAMEWORK_PATH/Python" 2>/dev/null || true
             codesign -s - "$FRAMEWORK_PATH/Python"
+            
+            codesign -s - "$FRAMEWORK_ROOT"
           fi
           
-          # Copy icon file to Resources
           if [ -f "assets/icons/app_icon.icns" ]; then
             cp "assets/icons/app_icon.icns" "$APP_PATH/Contents/Resources/icon.icns"
           else
-            echo "Warning: Icon file not found at assets/icons/app_icon.icns"
-            # Try to find the icon file in the workspace
             ICON_PATH=$(find . -name "app_icon.icns" -type f | head -1)
             if [ -n "$ICON_PATH" ]; then
               cp "$ICON_PATH" "$APP_PATH/Contents/Resources/icon.icns"
             fi
           fi
           
-          # Update Info.plist to fix app name and icon
           /usr/libexec/PlistBuddy -c "Set :CFBundleDisplayName 'Dream Launcher'" "$APP_PATH/Contents/Info.plist"
           /usr/libexec/PlistBuddy -c "Set :CFBundleName 'Dream Launcher'" "$APP_PATH/Contents/Info.plist"
           /usr/libexec/PlistBuddy -c "Set :CFBundleIconFile icon.icns" "$APP_PATH/Contents/Info.plist"
           
-          # Update install names
           EXECUTABLE="$APP_PATH/Contents/MacOS/DreamLauncher"
           install_name_tool -change "/Library/Frameworks/Python.framework/Versions/3.13/Python" "@executable_path/../Frameworks/Python.framework/Versions/3.13/Python" "$EXECUTABLE"
           
-          # Sign the entire application with ad-hoc signature (no runtime)
+
           echo "Signing the application bundle"
           codesign --remove-signature "$APP_PATH" 2>/dev/null || true
-          codesign -s - --deep "$APP_PATH"
           
-          # Rename the app to "Dream Launcher.app"
+          codesign -s - "$EXECUTABLE"
+          
+          codesign -s - "$APP_PATH"
+          
           mv "$APP_PATH" "/tmp/Dream Launcher.app"
           
-          # Create DMG with embedded Python
           hdiutil create -volname "Dream Launcher" -srcfolder "/tmp/Dream Launcher.app" -ov -format UDZO "DreamLauncher.dmg"
           
-          # Clean up temporary app
           rm -rf "/tmp/Dream Launcher.app"
 
       - name: Upload
