--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -242,28 +242,28 @@ jobs:
             
             # Create Info.plist for the framework
             mkdir -p "$FRAMEWORK_PATH/Resources"
-            cat > "$FRAMEWORK_PATH/Resources/Info.plist" << EOF
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-    <key>CFBundleExecutable</key>
-    <string>Python</string>
-    <key>CFBundleIdentifier</key>
-    <string>org.python.python</string>
-    <key>CFBundleInfoDictionaryVersion</key>
-    <string>6.0</string>
-    <key>CFBundleName</key>
-    <string>Python</string>
-    <key>CFBundlePackageType</key>
-    <string>FMWK</string>
-    <key>CFBundleShortVersionString</key>
-    <string>$PYTHON_VERSION</string>
-    <key>CFBundleVersion</key>
-    <string>$PYTHON_VERSION</string>
-</dict>
-</plist>
-EOF
+            cat > "$FRAMEWORK_PATH/Resources/Info.plist" << 'EOF'
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>CFBundleExecutable</key>
+              <string>Python</string>
+              <key>CFBundleIdentifier</key>
+              <string>org.python.python</string>
+              <key>CFBundleInfoDictionaryVersion</key>
+              <string>6.0</string>
+              <key>CFBundleName</key>
+              <string>Python</string>
+              <key>CFBundlePackageType</key>
+              <string>FMWK</string>
+              <key>CFBundleShortVersionString</key>
+              <string>$PYTHON_VERSION</string>
+              <key>CFBundleVersion</key>
+              <string>$PYTHON_VERSION</string>
+          </dict>
+          </plist>
+          EOF
             
             ln -sf "Versions/Current/Resources" "Resources"
             
